[gd_scene load_steps=19 format=3 uid="uid://xetjn1k22kut"]

[ext_resource type="Theme" uid="uid://b7cej2d60vjv1" path="res://UI/Computer/Shop.tres" id="1_ttnr5"]
[ext_resource type="Script" path="res://UI/Computer/shop_list_handler.gd" id="2_tk8gg"]
[ext_resource type="StyleBox" uid="uid://dle3as3q1srn4" path="res://UI/Computer/Highlighted_item_shop.tres" id="3_48bvi"]
[ext_resource type="Script" path="res://UI/Computer/Part_Categories_Shop.gd" id="3_hty7b"]
[ext_resource type="Theme" uid="uid://djwkn1r8xu4oo" path="res://UI/Computer/Shop_stats.tres" id="4_1l0pp"]
[ext_resource type="Script" path="res://UI/Computer/Search Bar.gd" id="4_bcd1o"]
[ext_resource type="Script" path="res://UI/Computer/Stats_Tab.gd" id="5_jrjlh"]
[ext_resource type="Script" path="res://UI/Computer/Shop_Display_Light.gd" id="6_t03qx"]
[ext_resource type="Texture2D" uid="uid://dds3p523p0ik5" path="res://Shaders/light.png" id="7_el63x"]
[ext_resource type="Script" path="res://UI/Computer/Buy_Sell_Part.gd" id="10_ho447"]
[ext_resource type="AudioStream" uid="uid://c8f4tiw3oaya7" path="res://Sound/Buy.mp3" id="10_rxrl6"]
[ext_resource type="Texture2D" uid="uid://b350jwt2tgchl" path="res://addons/rmsmartshape/assets/light1-1.png" id="11_g6fwg"]
[ext_resource type="Script" path="res://UI/Computer/Part insufficient money Popup.gd" id="12_524wy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lekva"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.890196, 0.882353, 0.827451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lew1o"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.290196, 0.290196, 0.290196, 0.2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_so04u"]
bg_color = Color(0.290196, 0.290196, 0.290196, 0.129412)
expand_margin_left = 13.0
expand_margin_right = 18.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_57b0w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fk4s6"]
bg_color = Color(0.890196, 0.882353, 0.827451, 1)
border_color = Color(0.658824, 0.654902, 0.615686, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.176471)
shadow_size = 15

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ttnr5")

[node name="Top Page Panel" type="Panel" parent="."]
layout_mode = 2
offset_left = 330.0
offset_top = 100.0
offset_right = 2230.0
offset_bottom = 233.0

[node name="Parts" type="ItemList" parent="." node_paths=PackedStringArray("category_list", "stats_tab")]
layout_mode = 2
offset_left = 700.0
offset_top = 233.0
offset_right = 2230.0
offset_bottom = 1430.0
theme_override_constants/outline_size = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_lekva")
theme_override_styles/selected = SubResource("StyleBoxFlat_lew1o")
theme_override_styles/selected_focus = SubResource("StyleBoxFlat_lew1o")
allow_reselect = true
max_columns = 2
same_column_width = true
fixed_column_width = 742
fixed_icon_size = Vector2i(68, 64)
script = ExtResource("2_tk8gg")
category_list = NodePath("../Part Categories")
stats_tab = NodePath("../Control/Part Stats")
function = "Buy"
highlighted_item_color = Color(0.290196, 0.290196, 0.290196, 0.129412)

[node name="Part Categories" type="ItemList" parent="."]
layout_mode = 2
offset_left = 330.0
offset_top = 233.0
offset_right = 700.0
offset_bottom = 1430.0
theme_override_styles/hovered = SubResource("StyleBoxFlat_so04u")
theme_override_styles/selected = ExtResource("3_48bvi")
theme_override_styles/selected_focus = ExtResource("3_48bvi")
script = ExtResource("3_hty7b")

[node name="Top Tab" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 116.0
offset_right = 2210.0
offset_bottom = 211.0
theme_override_constants/separation = 20

[node name="Car_Tab" type="Button" parent="Top Tab"]
layout_mode = 2
toggle_mode = true
text = " CAR "

[node name="Engine_Tab" type="Button" parent="Top Tab"]
layout_mode = 2
toggle_mode = true
text = "ENGINE"

[node name="Both_Tab" type="Button" parent="Top Tab"]
layout_mode = 2
toggle_mode = true
text = " BOTH "

[node name="Search Bar" type="TextEdit" parent="Top Tab"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search for a part here"
script = ExtResource("4_bcd1o")

[node name="Search Button" type="Button" parent="Top Tab"]
layout_mode = 2
text = "Search"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 679.0
offset_top = 312.0
offset_right = 719.0
offset_bottom = 352.0
theme = ExtResource("4_1l0pp")

[node name="Part Stats" type="Panel" parent="Control" node_paths=PackedStringArray("part_list", "not_enough_money_popup", "buy_sell_button")]
visible = false
layout_mode = 0
offset_right = 1176.0
offset_bottom = 882.0
pivot_offset = Vector2(588, 441)
script = ExtResource("5_jrjlh")
part_list = NodePath("../../Parts")
not_enough_money_popup = NodePath("Not Enough Money Popup")
buy_sell_button = NodePath("Buy Sell Button")

[node name="Background Blocker" type="Panel" parent="Control/Part Stats"]
layout_mode = 0
offset_left = -349.0
offset_top = -236.0
offset_right = 1551.0
offset_bottom = 1118.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_57b0w")

[node name="Name" type="Label" parent="Control/Part Stats"]
layout_mode = 0
offset_left = 57.0
offset_top = 27.0
offset_right = 1129.0
offset_bottom = 138.0
text = "Nagata Koi Front Bumper"

[node name="Price" type="Label" parent="Control/Part Stats"]
layout_mode = 0
offset_left = 684.0
offset_top = 661.0
offset_right = 1756.0
offset_bottom = 772.0
theme_override_colors/font_color = Color(0, 0.690196, 0, 1)
text = "Price: -"

[node name="Stat_text" type="RichTextLabel" parent="Control/Part Stats"]
layout_mode = 0
offset_left = 678.0
offset_top = 128.0
offset_right = 1170.0
offset_bottom = 882.0
text = "Torque: 400
Weight: 200
Max Torque: 600
Efficiency: 86%

Price: 600$
"

[node name="Display" type="Panel" parent="Control/Part Stats"]
layout_mode = 0
offset_left = 57.0
offset_top = 128.0
offset_right = 644.0
offset_bottom = 824.0
pivot_offset = Vector2(588, 441)
theme_override_styles/panel = SubResource("StyleBoxFlat_fk4s6")

[node name="Lighting" type="Node2D" parent="Control/Part Stats/Display"]
position = Vector2(289.56, 341.884)

[node name="Light Axis" type="Node2D" parent="Control/Part Stats/Display/Lighting"]
position = Vector2(3.43979, -7.88367)
scale = Vector2(0.804, 0.647)
script = ExtResource("6_t03qx")

[node name="PointLight2D5" type="PointLight2D" parent="Control/Part Stats/Display/Lighting/Light Axis"]
position = Vector2(700, 0)
scale = Vector2(1.3, 1)
range_z_min = 2999
range_z_max = 3100
texture = ExtResource("7_el63x")
texture_scale = 3.4
height = 130.0

[node name="PointLight2D6" type="PointLight2D" parent="Control/Part Stats/Display/Lighting/Light Axis"]
position = Vector2(-700, 0)
rotation = -3.14159
scale = Vector2(1.3, 1)
range_z_min = 2999
range_z_max = 3100
texture = ExtResource("7_el63x")
texture_scale = 3.4
height = 130.0

[node name="CanvasModulate" type="CanvasModulate" parent="Control/Part Stats/Display/Lighting"]
color = Color(0.0392157, 0.113725, 0.172549, 1)

[node name="Part Location" type="Marker2D" parent="Control/Part Stats/Display" groups=["Computer"]]
position = Vector2(292.95, 334.395)

[node name="Buy Sell Button" type="Button" parent="Control/Part Stats"]
layout_mode = 0
offset_left = 679.59
offset_top = 741.344
offset_right = 879.59
offset_bottom = 825.344
text = "   Buy   "

[node name="Exit Button" type="Button" parent="Control/Part Stats"]
layout_mode = 0
offset_left = 1073.0
offset_top = 17.0
offset_right = 1158.0
offset_bottom = 102.0
text = "X"

[node name="Buy_sell_Sound" type="AudioStreamPlayer" parent="Control/Part Stats"]
stream = ExtResource("10_rxrl6")

[node name="Part Confirmation Popup" type="Panel" parent="Control/Part Stats" node_paths=PackedStringArray("part_stats", "buy_sell_sound")]
visible = false
z_index = 495
layout_mode = 0
offset_left = 276.0
offset_top = 315.0
offset_right = 899.0
offset_bottom = 597.0
script = ExtResource("10_ho447")
part_stats = NodePath("..")
function = "Buy"
buy_sell_sound = NodePath("../Buy_sell_Sound")

[node name="Label" type="Label" parent="Control/Part Stats/Part Confirmation Popup"]
layout_mode = 0
offset_left = 53.0
offset_top = 8.0
offset_right = 568.0
offset_bottom = 139.0
text = "Are you sure you want to 
purchase this part?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Part Stats/Part Confirmation Popup"]
layout_mode = 0
offset_left = 93.0
offset_top = 154.0
offset_right = 518.0
offset_bottom = 254.0
theme_override_constants/separation = 25

[node name="Yes" type="Button" parent="Control/Part Stats/Part Confirmation Popup/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "Yes"

[node name="No" type="Button" parent="Control/Part Stats/Part Confirmation Popup/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "No"

[node name="PointLight2D" type="PointLight2D" parent="Control/Part Stats/Part Confirmation Popup"]
position = Vector2(306, 142)
energy = 0.75
range_z_min = 3493
range_z_max = 3493
texture = ExtResource("11_g6fwg")
texture_scale = 10.0

[node name="Not Enough Money Popup" type="Panel" parent="Control/Part Stats" node_paths=PackedStringArray("part_stats")]
visible = false
z_index = 495
layout_mode = 0
offset_left = 276.0
offset_top = 315.0
offset_right = 899.0
offset_bottom = 597.0
script = ExtResource("12_524wy")
part_stats = NodePath("..")

[node name="Label" type="Label" parent="Control/Part Stats/Not Enough Money Popup"]
layout_mode = 0
offset_left = 53.0
offset_top = 8.0
offset_right = 568.0
offset_bottom = 139.0
text = "You are too broke to buy
this, looser"
horizontal_alignment = 1

[node name="PointLight2D" type="PointLight2D" parent="Control/Part Stats/Not Enough Money Popup"]
position = Vector2(306, 142)
energy = 0.75
range_z_min = 3493
range_z_max = 3493
texture = ExtResource("11_g6fwg")
texture_scale = 10.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Part Stats/Not Enough Money Popup"]
layout_mode = 0
offset_left = 212.0
offset_top = 154.0
offset_right = 412.0
offset_bottom = 254.0
theme_override_constants/separation = 25

[node name="No" type="Button" parent="Control/Part Stats/Not Enough Money Popup/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "OK"

[connection signal="item_clicked" from="Parts" to="Parts" method="_on_item_clicked"]
[connection signal="item_selected" from="Parts" to="Parts" method="_on_item_selected"]
[connection signal="item_selected" from="Part Categories" to="Parts" method="_on_part_categories_item_selected"]
[connection signal="pressed" from="Top Tab/Car_Tab" to="Parts" method="_on_car_tab_pressed"]
[connection signal="pressed" from="Top Tab/Engine_Tab" to="Parts" method="_on_engine_tab_pressed"]
[connection signal="pressed" from="Top Tab/Both_Tab" to="Parts" method="_on_both_tab_pressed"]
[connection signal="text_changed" from="Top Tab/Search Bar" to="Top Tab/Search Bar" method="_on_text_changed"]
[connection signal="pressed" from="Top Tab/Search Button" to="Parts" method="_on_search_button_pressed"]
[connection signal="pressed" from="Control/Part Stats/Buy Sell Button" to="Control/Part Stats" method="_on_buy_sell_button_pressed"]
[connection signal="pressed" from="Control/Part Stats/Exit Button" to="Control/Part Stats" method="_on_exit_button_pressed"]
[connection signal="pressed" from="Control/Part Stats/Part Confirmation Popup/HBoxContainer/Yes" to="Control/Part Stats/Part Confirmation Popup" method="_on_yes_pressed"]
[connection signal="pressed" from="Control/Part Stats/Part Confirmation Popup/HBoxContainer/No" to="Control/Part Stats/Part Confirmation Popup" method="_on_no_pressed"]
[connection signal="pressed" from="Control/Part Stats/Not Enough Money Popup/HBoxContainer/No" to="Control/Part Stats/Not Enough Money Popup" method="_on_no_pressed"]
